2006-05-23  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.profile.constantgradient.calculate.ave: Started with
	implementation of RFE #1492504 (Direct gradient input) 
	
2006-05-19  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.createdbfsewercalculation.ave: Forget configuration file
	if the configuration is wrong

2006-05-16  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesignextension.make.ave: version number is 2.0.9+svn now
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.accumulatepopulation.ave: Added possibility to
	specify optional fields for maximum accumulated population and 
	difference
	
2006-05-13  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.profile.buildnodelist.ave: Allow a single line 
	selection; fixes bug #1483330
	* dcsewerdesign.complexprofile.create.ave: Better support for profiles
	with non-uniform line directions; fixes bug #1487774
	* dcsewerdesignextension.make.ave: Version number is 2.0.9 now
	* doc/en/dcsewerdesign.xml: Switched from DocBook article to book;
	added index

2006-05-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.profile.buildlinelist.ave: Allow a single line 
	selection; related to bug #1483330

2006-02-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml: Restructured FAQ
	* doc/build.xml: Corrected default target

2006-02-01  Dennis Vilovic <Dennis_Vilovic@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml: Added 

2005-08-11  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml: Write md5sum.txt
	
2005-08-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml:
	* build.xml:
	* dcsewerdesign.nsi:
	* dcsewerdesignextension.make.ave: Updated for 2.0.8 release
	
2005-08-09  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/docbook.xsl: Don't include page numbers in cross references;
	Don't use CP1256
	* doc/docbook.css: Improved author layout
	* dcsewerdesign.profile.constantgradient.calculate.ave: Calculation