@@ -1116,12 +1116,14 @@ ncel to interpolate between two points.\", \"DC Sewer Design\", \"\")\nnumGradie
 Line.findField(\"dc_id\")\nfldLineShape = ftbLine.findField(\"Shape\")\nif(fldLineDcId.asString = \"nil\")then\n  MsgBox.error(\"Error: Field Line.DC_ID was not found.\",\"DC Sewer Design\")\n  exit\nend\n\nlstFields = ftbLine.getFields.deepclone\n\n' Search preferences for upstream/downstream fields\n\ndicPreferences = extSewer.getPreferences\n\nfldUpstream = nil\nstrUpstream = dicPreferences.get(\"strUpstreamField\")\nif(strUpstream <> nil)then\n  fldUpstream = ftbLine.findField(strUpstream)\nend\nfldDownstream = nil\nstrDownstream = d
 icPreferences.get(\"strDownstreamField\")\nif(strDownstream <> nil)then\n  fldDownstream = ftbLine.findField(strDownstream)\nend\n\nfldGradient = nil\nstrGradient = dicPreferences.get(\"strGradientField\")\nif(strGradient <> nil)then\n  fldGradient = ftbLine.findField(strGradient)\nend  \n\n' Let the user choose the fields if necessary\n\nif((fldUpstream = nil) or (fldDownstream = nil) or (fldGradient = nil))then\n  lstNumberFields = av.run(\"DCSewerDesign.Fields.returnNumberFields\",lstFields)\n  fldUpstream = MsgBox.choice(ls
 tNumberFields, \"Select upstream field.\"+NL+\n                              \"This field will be overwritten for some records.\",\"DC Sewer Design\")\n  if(fldUpstream = nil)then\n    exit\n  end\n  fldDownstream = MsgBox.choice(lstNumberFields, \"Select downstream field.\"+NL+\n                              \"This field will be overwritten for some records.\",\"DC Sewer Design\")\n  if(fldDownstream = nil)then\n    exit\n  end\n  fldGradient = MsgBox.choice(lstNumberFields, \"Select gradient field.\"+NL+\n    \"This field will be 
-overwritten.\", \"DC Sewer Design\")\n  if(fldGradient = nil)then\n    exit\n  end  \n  strUpstream = fldUpstream.getName\n  dicPreferences.set(\"strUpstreamField\", strUpstream)\n  strDownstream = fldDownstream.getName\n  dicPreferences.set(\"strDownstreamField\", strDownstream)\n  strGradient = fldGradient.getName\n  dicPreferences.set(\"strGradientField\", strGradient)\nend\nif(blnDebug)then\n  System.echo(fldUpstream.getName)\n  System.echo(fldDownstream.getName)\nend\nfldUpstream = ftbLine.findField(fldUpstream.getName)\nfldDo
-wnstream = ftbLine.findField(fldDownstream.getName)\nfldGradient = ftbLine.findField(fldGradient.getName)\n\nlstProfileLines = av.run(\"DCSewerDesign.Profile.buildLineList\", {ftbLine, fldLineDcId})\nfor each recLine in lstProfileLines\n  if(blnDebug)then\n    System.echo(ftbLine.returnValue(fldLineDcId, recLine)+ftbLine.returnValue(fldUpstream, recLine).asString)\n  end\nend\n\n' Get first upstream value\n\nnumFirstUpstream = ftbLine.returnValue(fldUpstream, lstProfileLines.get(0))\n\n' Get last downstream value\n\nnumLastD
-ownstream = ftbLine.returnValue(fldDownstream, lstProfileLines.get(lstProfileLines.count-1))\n\n' Calculate segment, total length\n\nlstSegmentLength = List.make\nnumTotalLength = 0\nfor each recLine in lstProfileLines\n  pllShape = ftbLine.returnValue(fldLineShape, recLine)\n  numSegmentLength = pllShape.returnLength\n  numTotalLength = numTotalLength + numSegmentLength\n  lstSegmentLength.add(numSegmentLength)\nend\n\n' Calculate Gradient\nif(blnDebug)then\n  System.echo(\"FirstUpstream: \"+numFirstUpstream.asString)\n  Sy
-stem.echo(\"Last Downstream: \"+numLastDownstream.asString)\n  System.echo(\"Total Length: \"+numTotalLength.asString)\nend\n\nif(numGradient = nil)then\n  numGradient = (numFirstUpstream - numLastDownstream)/numTotalLength\nend\n\n\n' Request approval\n\nblnApproval = MsgBox.yesNoCancel(\"Interpolate \"+strUpstream.quote+\",\"+strDownstream.quote+\" fields for \"+\n  lstProfileLines.count.asString+\" segments? Gradient \"+\n  numGradient.asString+\" will be written to \" + strGradient.quote+\n  \". Selecting \"\"No\"\" will allow to resel
-ect the fields\",\"DC Sewer Design\", true)\n\nif(blnApproval = nil)then\n  exit\nend\n\nif(blnApproval.not)then\n  dicPreferences.remove(\"strUpstreamField\")\n  dicPreferences.remove(\"strDownstreamField\")\n  dicPreferences.remove(\"strGradientField\")\n  exit\nend\n\n' Interpolate\nif(numGradient.isNull)then\n  MsgBox.error(\"Gradient is Null\", \"DC Sewer Design\")\n  exit\nend\nnumElevation = numFirstUpstream\nnumI = 0\nfor each recLine in lstProfileLines\n  ftbLine.setValue(fldUpstream, recLine, numElevation)\n  ftbLine.setValue(fldGr
-adient, recLine, numGradient)\n  numSegmentLength = lstSegmentLength.get(numI)\n  numElevation = numElevation - (numSegmentLength*numGradient)\n  if(blnDebug)then\n    System.echo(numElevation.asString)\n  end  \n  ftbLine.setValue(fldDownstream, recLine, numElevation)\n  numI = numI + 1\nend\n\n' Control Result\nif((numElevation-numLastDownstream).abs > (numLastDownstream/1000))then\n  System.echo(\"DCSewerDesign.Profile.ConstantGradient.calculate(): More than 1/1000 difference in control.\")\nend"
+overwritten.\", \"DC Sewer Design\")\n  if(fldGradient = nil)then\n    exit\n  end  \n  strUpstream = fldUpstream.getName\n  dicPreferences.set(\"strUpstreamField\", strUpstream)\n  strDownstream = fldDownstream.getName\n  dicPreferences.set(\"strDownstreamField\", strDownstream)\n  strGradient = fldGradient.getName\n  dicPreferences.set(\"strGradientField\", strGradient)\nend\n\nif(blnDebug)then\n  System.echo(fldUpstream.getName)\n  System.echo(fldDownstream.getName)\nend\n\nfldUpstream = ftbLine.findField(fldUpstream.getName)\nfld
+Downstream = ftbLine.findField(fldDownstream.getName)\nfldGradient = ftbLine.findField(fldGradient.getName)\n\nlstProfileLines = av.run(\"DCSewerDesign.Profile.buildLineList\", {ftbLine, fldLineDcId})\n\nif(blnDebug)then\n  for each recLine in lstProfileLines\n    System.echo(ftbLine.returnValue(fldLineDcId, recLine)+ftbLine.returnValue(fldUpstream, recLine).asString)\n  end\nend\n\n' Get first upstream value\n\nnumFirstUpstream = ftbLine.returnValue(fldUpstream, lstProfileLines.get(0))\n\n' Get last downstream value\n\nnumLa
+stDownstream = ftbLine.returnValue(fldDownstream, lstProfileLines.get(lstProfileLines.count-1))\n\n' Calculate segment, total length\n\nlstSegmentLength = List.make\nnumTotalLength = 0\nfor each recLine in lstProfileLines\n  pllShape = ftbLine.returnValue(fldLineShape, recLine)\n  numSegmentLength = pllShape.returnLength\n  numTotalLength = numTotalLength + numSegmentLength\n  lstSegmentLength.add(numSegmentLength)\nend\n\n' Calculate Gradient\nif(blnDebug)then\n  System.echo(\"FirstUpstream: \"+numFirstUpstream.asString)\n 
+ System.echo(\"Last Downstream: \"+numLastDownstream.asString)\n  System.echo(\"Total Length: \"+numTotalLength.asString)\nend\n  \nif(numGradient = nil)then  \n  numGradient = (numFirstUpstream - numLastDownstream)/numTotalLength\nend\n\n\n' Request approval\n\nblnApproval = MsgBox.yesNoCancel(\"Interpolate \"+strUpstream.quote+\",\"+strDownstream.quote+\" fields for \"+\n  lstProfileLines.count.asString+\" segments? Gradient \"+\n  numGradient.asString+\" will be written to \" + strGradient.quote+\n  \". Selecting \"\"No\"\" will allow t
+o reselect the fields\",\"DC Sewer Design\", true)\n\nif(blnApproval = nil)then\n  exit\nend\n\nif(blnApproval.not)then\n  dicPreferences.remove(\"strUpstreamField\")\n  dicPreferences.remove(\"strDownstreamField\")\n  dicPreferences.remove(\"strGradientField\")\n  exit\nend\n\n' Interpolate\nif(numGradient.isNull)then\n  MsgBox.error(\"Gradient is Null\", \"DC Sewer Design\")\n  exit\nend\n\nnumI = 0\n\nif(blnFromUpstream)then\n  numElevation = numFirstUpstream\n  for each recLine in lstProfileLines\n    ftbLine.setValue(fldUpstream, recLine,
+ numElevation)\n    ftbLine.setValue(fldGradient, recLine, numGradient)\n    numSegmentLength = lstSegmentLength.get(numI)\n    numElevation = numElevation - (numSegmentLength*numGradient)\n    if(blnDebug)then\n      System.echo(numElevation.asString)\n    end  \n    ftbLine.setValue(fldDownstream, recLine, numElevation)\n    numI = numI + 1\n  end\n  \n  ' Control Result\n\n  if((numElevation-numLastDownstream).abs > (numLastDownstream/1000))then\n    System.echo(\"DCSewerDesign.Profile.ConstantGradient.calculate(): Mor
+e than 1/1000 difference in control.\")\n  end\nelse\n  numElevation = numLastDownstream\n  lstProfileLines = av.run(\"DCSewerDesign.List.flip\", lstProfileLines)\n  lstSegmentLength = av.run(\"DCSewerDesign.List.flip\", lstSegmentLength)\n  for each recLine in lstProfileLines\n    ftbLine.setValue(fldDownstream, recLine, numElevation)\n    ftbLine.setValue(fldGradient, recLine, numGradient)\n    numSegmentLength = lstSegmentLength.get(numI)\n    numElevation = numElevation + (numSegmentLength*numGradient)\n    if(blnDebug
+)then\n      System.echo(numElevation.asString)\n    end  \n    ftbLine.setValue(fldUpstream, recLine, numElevation)\n    numI = numI + 1\n  end\n  \n  ' Control Result\n\n  if((numElevation-numFirstUpstream).abs > (numFirstUpstream/1000))then\n    System.echo(\"DCSewerDesign.Profile.ConstantGradient.calculate(): More than 1/1000 difference in control.\")\n  end\nend\n"
 	SearchStr:	"echo"
 	FontSize:	1
 )
@@ -5022,6 +5024,7 @@ e(sedScript.getSource, sedScript.getSource.count)\n    txfScript.close\n    numW
 )
 
 (Choice.894
+	Disabled:	1
 	Help:	"Finds the next occurrence of the string"
 	HelpTopic:	"Script_FindNext"
 	Update:	"Script.FindNextUpdate"
@@ -5304,7 +5307,7 @@ e(sedScript.getSource, sedScript.getSource.count)\n    txfScript.close\n    numW
 )
 
 (AVStr.930
-	S:	"dcsewerdesign.apr DCSewerDesign.Profile.ConstantGradient.calculate"
+	S:	"dcsewerdesign.apr DCSewerDesign.Profile.buildLineList"
 )
 
 (Choice.931
@@ -5315,8 +5318,8 @@ e(sedScript.getSource, sedScript.getSource.count)\n    txfScript.close\n    numW
 )
 
 (Choice.932
-	Help:	"Activates DCSewerDesign.Profile.ConstantGradient.calculate"
-	Label:	"&2 DCSewerDesign.Profile.ConstantGradient.calculate"
+	Help:	"Activates DCSewerDesign.Profile.buildLineList"
+	Label:	"&2 DCSewerDesign.Profile.buildLineList"
 	Click:	"WindowActivate"
 	Shortcut:	"Keys.None"
 )
